# convert

./: .gitignore  CMakeLists.txt  install-dependencies.cmd  install-dependencies.sh
include/alef/: cast.h
include/alef/cast/: macro.h  std_cast.h  string.h
include/alef/cast/string/: string_to_floating_point.h  string_to_integer.h
scripts/: install-vcpkg-windows.cmd  vcpkg-linux.md
test/: CMakeLists.txt
test/alef/cast/string/: sample_test.cpp  string_to_floating_point_test.cpp  string_to_integer_test.cpp
